# api/models/IdentityRole.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Beau Plan Administrator\'s API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface IdentityRole
+ */
+export interface IdentityRole {
+    /**
+     * 
+     * @type {string}
+     * @memberof IdentityRole
+     */
+    id?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof IdentityRole
+     */
+    name?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof IdentityRole
+     */
+    normalizedName?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof IdentityRole
+     */
+    concurrencyStamp?: string | null;
+}
+
+/**
+ * Check if a given object implements the IdentityRole interface.
+ */
+export function instanceOfIdentityRole(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function IdentityRoleFromJSON(json: any): IdentityRole {
+    return IdentityRoleFromJSONTyped(json, false);
+}
+
+export function IdentityRoleFromJSONTyped(json: any, ignoreDiscriminator: boolean): IdentityRole {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': !exists(json, 'id') ? undefined : json['id'],
+        'name': !exists(json, 'name') ? undefined : json['name'],
+        'normalizedName': !exists(json, 'normalizedName') ? undefined : json['normalizedName'],
+        'concurrencyStamp': !exists(json, 'concurrencyStamp') ? undefined : json['concurrencyStamp'],
+    };
+}
+
+export function IdentityRoleToJSON(value?: IdentityRole | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'id': value.id,
+        'name': value.name,
+        'normalizedName': value.normalizedName,
+        'concurrencyStamp': value.concurrencyStamp,
+    };
+}
+
